save버튼 수정 및 나의 여행지 페이지 수정 중

--- a/travelOntheMap/public/stylesheets/myliststyle.css
+++ b/travelOntheMap/public/stylesheets/myliststyle.css
@@ -1,8 +1,9 @@
-* {
-    box-sizing: border-box;
+
+  body {
+    padding: 0px !important;
+    margin : 0px !important;
   }
-
-
+  
   #navbar{
     height:80px;
     width :80px;
@@ -21,7 +22,7 @@
   }
   
   #infoBox{
-    height:80px;
+    height:40px;
     width :80px;
     background: thistle;
     color : #262626;
@@ -37,124 +38,170 @@
     text-align: center;
   }
   
-  
-  body, html {
-    /* width: 100%;
-    height: 100%; */
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-            justify-content: center;
-    background: snow;
-  }
-  
-  .wrapper {
-    display: -webkit-box;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    margin-bottom: 30px;
-    /* border : 1px solid orange; */
-    
-  }
-
-
-  .card {
-    width: 280px;
-    height: 360px;
-    border-radius: 15px;
-    padding: 1.5rem;
-    background: white;
-    position: relative;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: end;
-            align-items: flex-end;
-    -webkit-transition: 0.4s ease-out;
-    transition: 0.4s ease-out;
-    box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
-  }
-  .card:hover {
-    -webkit-transform: translateY(20px);
-            transform: translateY(20px);
-  }
-  .card:hover:before {
-    opacity: 1;
-  
-  }
-  .card:hover .info {
-    opacity: 1;
-    -webkit-transform: translateY(0px);
-            transform: translateY(0px);
-  }
-  .card:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    border-radius: 15px;
-    background: rgba(0, 0, 0, 0.6);
-    z-index: 2;
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-    opacity: 0;
-  }
-  .card img {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 15px;
-  }
-  .card .info {
-    position: relative;
-    z-index: 3;
-    color: white;
-    opacity: 0;
-    -webkit-transform: translateY(30px);
-            transform: translateY(30px);
-    -webkit-transition: 0.5s;
-    transition: 0.5s;
-  }
-  .card .info h1 {
-    margin: 0px;
-  }
-  .card .info p {
-    letter-spacing: 1px;
+  #mytravel {
+    height:40px;
+    width :80px;
+    background: thistle;
+    color : #262626;
+    font-weight: bolder;
     font-size: 15px;
-    margin-top: 8px;
-  }
-  .card .info button {
-    padding: 0.6rem;
-    outline: none;
-    border: none;
-    border-radius: 3px;
-    background: white;
-    color: black;
-    font-weight: bold;
-    cursor: pointer;
-    -webkit-transition: 0.4s ease;
-    transition: 0.4s ease;
-  }
-  .card .info button:hover {
-    background: dodgerblue;
-    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 10001;
+    top: 140px;
+    left: 20px;
+    text-align: center;
   }
   
-  .card2click{
-    top: -30px;
-    width : 252px;
-    background-color: white;
-    color: burlywood;
-    border-radius: 15px;
+  #poster{
+    height:40px;
+    width :80px;
+    background: thistle;
+    color : #262626;
+    font-weight: bolder;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    z-index: 10001;
+    top: 180px;
+    left: 20px;
     text-align: center;
-    /* border: 1px solid burlywood; */
   }
+  /* ////////// */
+
+  body
+{
+  background-color:#f2f2f2;
+  font-family: 'RobotoDraft', 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+*
+{
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+h5
+{
+  margin:0px;
+  font-size:1.4em;
+  font-weight:700;
+}
+
+p
+{
+  font-size:12px;
+}
+
+.center
+{
+  height:100vh;
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* End Non-Essential  */
+
+.property-card
+{
+  height:18em;
+  width:14em;
+  /* display:-webkit-box;
+  display:-ms-flexbox;
+  display:flex; */
+  /* -webkit-box-orient:vertical;
+  -webkit-box-direction:normal; */
+  /* -ms-flex-direction:row;
+  flex-direction: row; */
+  position:relative;
+  -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  border-radius:16px;
+  overflow:hidden;
+  -webkit-box-shadow:  15px 15px 27px #e1e1e3, -15px -15px 27px #ffffff;
+  box-shadow:  15px 15px 27px #e1e1e3, -15px -15px 27px #ffffff;
+}
+/* ^-- The margin bottom is necessary for the drop shadow otherwise it gets clipped in certain cases. */
+
+/* Top Half of card, image. */
+
+.property-image
+{
+  height:6em;
+  width:14em;
+  padding:1em 2em;
+  position:Absolute;
+  top:0px;
+  -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  background-size:cover;
+  background-repeat:no-repeat;
+}
+
+/* Bottom Card Section */
+
+.property-description
+{
+  background-color: #FAFAFC;
+  height:12em;
+  width:14em;
+  position:absolute;
+  bottom:0em;
+  -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  padding: 0.5em 1em;
+  text-align:center;
+}
+
+/* Social Icons */
+
+.property-social-icons
+{
+  width:1em;
+  height:1em;
+  background-color:black;
+  position:absolute;
+  bottom:1em;
+  left:1em;
+  -webkit-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition:all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+/* Property Cards Hover States */
+
+.property-card:hover .property-description
+{
+  height:0em;
+  padding:0px 1em;
+}
+.property-card:hover .property-image
+{
+  height:18em;
+}
+
+.property-card:hover .property-social-icons
+{
+  background-color:white;
+}
+
+.property-card:hover .property-social-icons:hover
+{
+  background-color:blue;
+  cursor:pointer;
+}
+
+
+
+
+
