--- a/travelOntheMap/public/stylesheets/style.css
+++ b/travelOntheMap/public/stylesheets/style.css
@@ -314,21 +314,20 @@ body, html {
 .card2click{
   top: -30px;
   width : 252px;
+  height : 40px;
   background-color: white;
   color: burlywood;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  border-radius: 15px;
   text-align: center;
+  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   /* border: 1px solid burlywood; */
 }
 
-/* dd */
-.myTravelSpot{
-  top: -60px;
-  width : 252px;
-  background-color: white;
-  color: burlywood;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  text-align: center;
+.isItSavedImg{
+  margin-left:5em
 }
+/* dd */
+
