--- a/travelOntheMap/views/mylist.ejs
+++ b/travelOntheMap/views/mylist.ejs
@@ -5,13 +5,15 @@
 </head>
 <body>
     <div id="navbar">랜섬<br>여행</div>
-    <div id="infoBox">베타버전<br><a href="/">홈으로</a></div>
+    <div id="infoBox">베타버전</div>
+    <div id="mytravel"><a href="/">홈으로</a></div>
+    <div id="poster"><a href="/updateinfo">업데이트내역</a></div>
 
     <div class="mylistcard"></div>
     <script>
-        // var urlAdd = "http://localhost:3000/"  
+        var urlAdd = "http://localhost:3000/"  
 
-        var urlAdd = "https://itjusttravel.herokuapp.com/"
+        // var urlAdd = "https://itjusttravel.herokuapp.com/"
         console.log(window.location.href)
 
 
@@ -47,20 +49,22 @@
                 if(myListArr.includes(target._id)){
                 console.log(target._id)
                 var content =`
-                <div class="wrapper">
-                    <div class="des">
-                        <div class="desTitle"><h3>${target.spot}</h3><div>
-                        <div class="desDes"><p>${target.des}</p><div>
-                    </div>
-                    <div class="card"><img src="${target.picLink}"/>
-                    <div style = "z-index:1000;color:white;"></div>
-                        <div class="info">
-                        <h3>${target.spot}</h3>
-                        <p>${target.des}</p>
-                        <a href="${target.moreLink}"><button>더 읽어보기</button></a>
+                <div class="center">
+                    <div class="property-card">
+                        <a href="'${target.moreLink}'">
+                        <div class="property-image" style = "background-image : url('${target.picLink}')">
+                        </div></a>
+                        <div class="property-description">
+                        <h5> '${target.spot}' </h5>
+                        <p>'${target.des}'</p>
                         </div>
+                        <a href="'${target.moreLink}'">
+                        <div class="property-social-icons">
+                            <!-- I would usually put multipe divs inside here set to flex. Some people might use Ul li. Multiple Solutions -->
+                        </div>
+                        </a>
                     </div>
-                    </div>  
+                </div> 
                 `
                 htmlData = htmlData + content
 
@@ -70,4 +74,6 @@
     
         }
     </script>
+
+
 </body>
