--- a/travelOntheMap/views/mylist.ejs
+++ b/travelOntheMap/views/mylist.ejs
@@ -11,11 +11,8 @@
 
     <div class="mylistcard"></div>
     <script>
-        var urlAdd = "http://localhost:3000/"  
-
-        // var urlAdd = "https://itjusttravel.herokuapp.com/"
-        console.log(window.location.href)
-
+        // var urlAdd = "http://localhost:3000/"  
+        var urlAdd = "https://itjusttravel.herokuapp.com/"
 
         var output = localStorage.getItem("key");		
         var myListArr = JSON.parse(output);
