--- a/travelOntheMap/views/mylist.ejs
+++ b/travelOntheMap/views/mylist.ejs
@@ -4,10 +4,14 @@
 
 </head>
 <body>
-    <div id="navbar">랜섬<br>여행</div>
-    <div id="infoBox">베타버전</div>
-    <div id="mytravel"><a href="/">홈으로</a></div>
-    <div id="poster"><a href="/updateinfo">업데이트내역</a></div>
+    <div class = "sideBar">
+        <div id="navbar">랜섬<br>여행</div>
+        <div id="infoBox">베타버전</div>
+        <div id="mytravel"><a href="/">홈으로</a></div>
+        <div id="poster"><a href="/updateinfo">업데이트내역</a></div>
+    </div>
+
+    <div class="header">나의 여행지 리스트</div>
 
     <div class="mylistcard"></div>
     <script>
