--- a/travelOntheMap/views/updateinfo.ejs
+++ b/travelOntheMap/views/updateinfo.ejs
@@ -7,6 +7,10 @@
 7/27.save me show me버튼 제거<br>
 7/27.url자동 수정, 로컬 or Others<br>
 7/27.나의 여행지 삭제기능 추가<br>
-7/27.<br>
+7/28.Save버튼 수정<br>
+7/28.나의 여행지 페이지 수정 중<br>
+7/28.<br>
+7/28.<br>
+7/28.<br>
 
 
