--- a/travelOntheMap/views/mylist.ejs
+++ b/travelOntheMap/views/mylist.ejs
@@ -16,7 +16,7 @@
     <div class="mylistcard"></div>
     <script>
         // var urlAdd = "http://localhost:3000/"  
-        var urlAdd = "https://itjusttravel.herokuapp.com/"
+        var urlAdd = "http://itjusttravel.herokuapp.com/"
 
         var output = localStorage.getItem("key");		
         var myListArr = JSON.parse(output);
