--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -39,7 +39,7 @@
   <!-- <script type="text/javascript" src="/data/data.js"></script> -->
   <script>
     // var urlAdd = "http://localhost:3000/"  
-    var urlAdd = "http://itjusttravel.herokuapp.com/"
+    var urlAdd = "https://itjusttravel.herokuapp.com/"
 
 
   var mapOptions = {
