--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -92,14 +92,16 @@
       
       var isItSavedText = ""
       if(target._id){
-        if(myListArr.includes(target._id)){
-          // 저장되어있다면
-          isItSavedText = "삭제";
-          isitSavedImg = "images/delete.png";
-        }else{
-          // 저장안되어 있음
-          isItSavedText = "담기";
-          isitSavedImg = "images/plus.png";
+        if(myListArr){
+          if(myListArr.includes(target._id)){
+            // 저장되어있다면
+            isItSavedText = "삭제";
+            isitSavedImg = "images/delete.png";
+          }else{
+            // 저장안되어 있음
+            isItSavedText = "담기";
+            isitSavedImg = "images/plus.png";
+          }
         }
       }
       
