--- a/travelOntheMap/views/mylist.ejs
+++ b/travelOntheMap/views/mylist.ejs
@@ -47,32 +47,34 @@
             // console.log(dataList)
             // if(!myListArr)myListArr=[0]
             for(var target of dataList){
-                if(myListArr.includes(target._id)){
-                console.log(target._id)
-                var content =`
-                <div class="center">
-                    <div class="property-card">
-                        <a href="'${target.moreLink}'">
-                        <div class="property-image" style = "background-image : url('${target.picLink}')">
-                        </div></a>
-                        <div class="property-description">
-                        <h5> '${target.spot}' </h5>
-                        <p>'${target.des}'</p>
-                        </div>
-                        <a href="'${target.moreLink}'">
-                        <div class="property-social-icons">
-                            <!-- I would usually put multipe divs inside here set to flex. Some people might use Ul li. Multiple Solutions -->
-                        </div>
-                        </a>
-                    </div>
-                </div> 
-                `
-                htmlData = htmlData + content
+                if(myListArr){
+                    if(myListArr.includes(target._id)){
+                        console.log(target._id)
+                        var content =`
+                        <div class="center">
+                            <div class="property-card">
+                                <a href="'${target.moreLink}'">
+                                <div class="property-image" style = "background-image : url('${target.picLink}')">
+                                </div></a>
+                                <div class="property-description">
+                                <h5> '${target.spot}' </h5>
+                                <p>'${target.des}'</p>
+                                </div>
+                                <a href="'${target.moreLink}'">
+                                <div class="property-social-icons">
+                                    <!-- I would usually put multipe divs inside here set to flex. Some people might use Ul li. Multiple Solutions -->
+                                </div>
+                                </a>
+                            </div>
+                        </div> 
+                        `
+                        htmlData = htmlData + content
 
-            }
+                    }
+                }
+                
         }
         $(".mylistcard").html(htmlData)
-    
         }
     </script>
 
