--- a/travelOntheMap/views/mylist.ejs
+++ b/travelOntheMap/views/mylist.ejs
@@ -19,7 +19,8 @@
         var urlAdd = "https://itjusttravel.herokuapp.com/"
 
         var output = localStorage.getItem("key");		
-        var myListArr = JSON.parse(output);
+        var myListArr = []
+        myListArr=JSON.parse(output);
 
         // console.log(myListArr[0])
 
@@ -28,7 +29,7 @@
 
         $.ajax({
             // url : "https://itjusttravel.herokuapp.com/file", // test.jsp 에서 받아옴
-            // // url : "http://localhost:3000/file",
+            // url : "http://localhost:3000/file",
             url :  urlAdd + 'file',
             dataType :"json", // 데이터타입을 json 으로 받아옴
             success : function(data) {
@@ -47,32 +48,29 @@
             // console.log(dataList)
             // if(!myListArr)myListArr=[0]
             for(var target of dataList){
-                if(myListArr){
-                    if(myListArr.includes(target._id)){
-                        console.log(target._id)
-                        var content =`
-                        <div class="center">
-                            <div class="property-card">
-                                <a href="'${target.moreLink}'">
-                                <div class="property-image" style = "background-image : url('${target.picLink}')">
-                                </div></a>
-                                <div class="property-description">
-                                <h5> '${target.spot}' </h5>
-                                <p>'${target.des}'</p>
-                                </div>
-                                <a href="'${target.moreLink}'">
-                                <div class="property-social-icons">
-                                    <!-- I would usually put multipe divs inside here set to flex. Some people might use Ul li. Multiple Solutions -->
-                                </div>
-                                </a>
-                            </div>
-                        </div> 
-                        `
-                        htmlData = htmlData + content
-
-                    }
-                }
                 
+                if(myListArr.includes(target._id)){
+                    console.log(target._id)
+                    var content =`
+                    <div class="center">
+                        <div class="property-card">
+                            <a href="'${target.moreLink}'">
+                            <div class="property-image" style = "background-image : url('${target.picLink}')">
+                            </div></a>
+                            <div class="property-description">
+                            <h5> '${target.spot}' </h5>
+                            <p>'${target.des}'</p>
+                            </div>
+                            <a href="'${target.moreLink}'">
+                            <div class="property-social-icons">
+                                <!-- I would usually put multipe divs inside here set to flex. Some people might use Ul li. Multiple Solutions -->
+                            </div>
+                            </a>
+                        </div>
+                    </div> 
+                    `
+                    htmlData = htmlData + content                 
+                }           
         }
         $(".mylistcard").html(htmlData)
         }
