--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -33,7 +33,7 @@
 
   <div id="loading">
     <img id="loading-image" src="/images/loading.gif" alt="데이터 로딩 중입니다" />
-    로딩 중
+    <br><br><br><br><br>데이터 로딩이 끝나지 않는다면,<br> qhdgkdbs@gmail.com이나 기타 연락처로 연락바랍니당
   </div>
   <div id="map" style="width:100%;height:100vh;"></div>
   <!-- <script type="text/javascript" src="/data/data.js"></script> -->
@@ -76,7 +76,6 @@
     }
   })
   
-  var target = {" ":" "};
   var setContent = function() {
     for(target of dataList){
       // console.log(typeof(target))
