--- a/travelOntheMap/views/updateinfo.ejs
+++ b/travelOntheMap/views/updateinfo.ejs
@@ -9,8 +9,8 @@
 7/27.나의 여행지 삭제기능 추가<br>
 7/28.Save버튼 수정<br>
 7/28.나의 여행지 페이지 수정 중<br>
-7/28.<br>
-7/28.<br>
+7/28.사이트 로딩 불가 문제 확인<br>
+7/28.일부 문제 해결<br>
 7/28.<br>
 
 
