--- a/travelOntheMap/views/updateinfo.ejs
+++ b/travelOntheMap/views/updateinfo.ejs
@@ -11,6 +11,12 @@
 7/28.나의 여행지 페이지 수정 중<br>
 7/28.사이트 로딩 불가 문제 확인<br>
 7/28.일부 문제 해결<br>
-7/28.<br>
+7/29.휴무<br>
+7/30.나의 여행지 ui수정<br>
+7/30.<br>
+7/30.<br>
+
+
+
 
 
