--- a/travelOntheMap/views/updateinfo.ejs
+++ b/travelOntheMap/views/updateinfo.ejs
@@ -13,8 +13,15 @@
 7/28.일부 문제 해결<br>
 7/29.휴무<br>
 7/30.나의 여행지 ui수정<br>
-7/30.<br>
-7/30.<br>
+7/31.휴식<br>
+8/01.휴식<br>
+8/02.랜딩페이지 수정<br>
+8/02.로딩이미지 수정<br>
+8/02.나의 여행지 멈춤<br>
+
+
+
+
 
 
 
