--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -1,304 +1,207 @@
-<!-- <!DOCTYPE html> -->
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-    <title>여행을 가고 싶어서 만드는 중</title>
-    <link rel="shortcut icon" href="https://i.postimg.cc/d061bMYv/favicon-1.png" type="image/x-icon">
-    <link rel="icon" href="https://i.postimg.cc/d061bMYv/favicon-1.png" type="image/x-icon">
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
-    crossorigin="anonymous">
-    <link rel = "stylesheet" href="/stylesheets/style.css">
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=9mlra4rwwq"></script>
-    <script type="text/javascript" src="/src/MarkerClustering.js"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173208515-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'UA-173208515-1');
-    </script>
+<meta charset="UTF-8">
+
+<title>Artist - Minimal HTML Portfolio</title>
+
+<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+<meta name="description" content="">
+<meta name="keywords" content="">
+<meta name="author" content="Tooplate">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+<link rel="stylesheet" href="stylesheets/bootstrap.min.css">
+<link rel="stylesheet" href="stylesheets/animate.css">
+<link rel="stylesheet" href="stylesheets/magnific-popup.css">
+<link rel="stylesheet" href="stylesheets/font-awesome.min.css">
+
+<!-- Main css -->
+<link rel="stylesheet" href="stylesheets/tooplate-style.css">
+
 </head>
-<body>
-  <div id="navbar">랜섬<br>여행</div>
-  <div id="infoBox">베타버전</div>
-  <div id="mytravel"><a href="/mylist">나의 여행지</a></div>
-  <div id="poster"><a href="/updateinfo">업데이트내역</a></div>
+<body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
-  <div id="current"><img src="/images/nowLocation1.png" height="30px" width="30px"/><br></div>
-
-  <div id="loading">
-    <img id="loading-image" src="/images/loading.gif" alt="데이터 로딩 중입니다" />
-    <br><br><br><br><br>데이터 로딩이 끝나지 않는다면,<br> qhdgkdbs@gmail.com이나 기타 연락처로 연락바랍니당
-  </div>
-  <div id="map" style="width:100%;height:100vh;"></div>
-  <!-- <script type="text/javascript" src="/data/data.js"></script> -->
-  <script>
-    // var urlAdd = "http://localhost:3000/"  
-    var urlAdd = "https://itjusttravel.herokuapp.com/"
+<!-- PRE LOADER -->
+<div class="preloader">
+     <div class="spinner">
+          <span class="spinner-rotate"></span>
+     </div>
+</div>
 
 
-  var mapOptions = {
-      center: new naver.maps.LatLng(37.531471, 126.979514),
-      zoom: 10
-  };
+<!-- HOME SECTION -->
+<div class="container">
+     <div class="row">
+          <section id="home" class="parallax-section">
 
-  var map = new naver.maps.Map('map', mapOptions);
-  
-  var markerList = [];
-  var infowindowList = [];
-  var dataList;
+               <div class="col-md-offset-1 col-md-10 col-sm-12">
+                    <div class="home-wrapper">
+                         <h3 class="wow fadeInUp" data-wow-delay="0.2s">랜 . 선 . 여. 행</h3>
+                         <h1 class="wow fadeInUp" data-wow-delay="0.3s">지도 위에서 여행을 떠나요🚀</h1>
+                         <a href="#about" class="wow fadeInUp smoothScroll arrow-btn" data-wow-delay="0.6s"><i class="fa fa-angle-double-down"></i></a>
+                    </div>
+               </div>
 
-  var output = localStorage.getItem("key");
-  var myListArr = [0,1,2];
-  if(output){
-    myListArr = JSON.parse(output);
-  }
+          </section>
+     </div>
+</div>
 
-  var isitSavedImg = "#";
 
-  $.ajax({
-    url : urlAdd + 'file',
-    dataType :"json", // 데이터타입을 json 으로 받아옴
-    success : function(data) {
-        // alert("data로딩이 완료되었습니다.")
-        dataList = data;
-        setContent(); 
-        $('#loading').hide();  
-    },
-    error : function(e) {
-        console.log(e.responseText);
-        console.log(e);
-    }
-  })
-  
-  var setContent = function() {
-    for(target of dataList){
-      // console.log(typeof(target))
-      // var target = dataList[i]
-      var latlng = new naver.maps.LatLng(target.lat, target.lng) //위도 경도
-      marker = new naver.maps.Marker({
-        map : map,
-        position : latlng,
-        icon : {
-          // content : "<div class='marker'></div>",
-          url:'/images/icon.png',
-          size: new naver.maps.Size(40, 40),
-          origin: new naver.maps.Point(0, 0),
-          anchor : new naver.maps.Point(16,20) // 중심 좌표를 변경해주는 것
-        }
-      })
-      
-      var isItSavedText = ""
-      
+<!-- ABOUT SECTION -->
+<section id="about" class="parallax-section">
+     <div class="container">
+          <div class="row">
 
-      if(myListArr.includes(target._id)){
-        // 저장되어있다면
-        isItSavedText = "삭제";
-        isitSavedImg = "https://i.postimg.cc/sgQGXBGD/icon-18.png";
-      }else{
-        // 저장안되어 있음
-        isItSavedText = "담기";
-        isitSavedImg = "https://i.postimg.cc/NFd2ymxL/icon-17.png";
-      }
+               <div class="col-md-4 col-sm-8">
+                    <img src="images/travelonmap1.jpg" class="wow fadeInUp img-responsive" data-wow-delay="0.2s" alt="about image" height="300px" width="300px">
+                    <div class="wow fadeInUp" data-wow-delay="0.2s">
+                         <h4>지도 위에서 여행을 떠나요🚀</h4>
+                         <p>해외여행을 못 가는 당신, 국내여행이라도, 아니면 랜섬여행이라도 떠나요</p>
+                         <a href="https://itjusttravel.herokuapp.com/" style="background-color: cadetblue; color: beige;">지금, 랜선여행 떠나기 🚀🚀</a>
+                    </div>
+               </div>
 
-      
+               <div class="col-md-8 col-sm-12">
+                    <div class="about-thumb">
+                         <div class="wow fadeInUp section-title" data-wow-delay="0.4s">
+                              <h3>랜 . 선 . 여 . 행</h3>
+                              <h2>현실세계에서 떠나지 못한다면, 인터넷 세상을 통해 떠나요</h2>
+                         </div>
+                         <div class="wow fadeInUp" data-wow-delay="0.6s">
+                              <p>우리는 때혼 휴식이 필요합니다. 그런데 요즘에는 떠나지 못하고 힘든 세상에 멈춰있죠. 언제가는 이 굴레에서 벗어나겠지만, 중간 중간 여행을 떠나며 쉼을 가져보는 것은 어떨까요. 당신이 지금 회사에 있을지라도요</p>
+                         </div>
+                    </div>
+               </div>
 
-      var content =`
-        <div class="wrapper">
-          <div class="card"><img src="${target.picLink}"/>
-          <div style = "z-index:1000;color:white;"></div>
-            <div class="info">
-              <h3>${target.spot}</h3>
-              <p>${target.des}</p>
-              <a href="${target.moreLink}"><button>더 읽어보기</button></a>
-            </div>
           </div>
-        </div> 
-        <div class = "bottomButton" > 
-          <span onclick='saveOrDeleteRedirect("${target._id}")' class="card2click">SAVE<img class= "isItSavedImg" src="${isitSavedImg}" alt="heelo" width="20" height="20" ></span>
-        </div>
-        `
-        // <span class="isItSavedText" >${isItSavedText}</span>
-
-        // <button onclick="saveSpot('${target._id}');">Save me</button>
-        // changeImage("https://i.postimg.cc/d061bMYv/favicon-1.png");
-        // <button onclick="console.log(JSON.parse(localStorage.getItem('key')))">Show me</button>
-      var infowindow = new naver.maps.InfoWindow({
-        content : content,
-        backgroundColor : "#00ff0000",
-        borderColor : "#00ff0000",
-        anchorSize : new naver.maps.Size(0,0)
-      })
-
-      markerList.push(marker);
-      infowindowList.push(infowindow);
-    }
-
-    for(var i = 0,ii = markerList.length; i < ii; i++){
-    naver.maps.Event.addListener(map, "click", clickMap(i));
-    naver.maps.Event.addListener(markerList[i], "click", getClickHandler(i));
-  }
-
-  var htmlMarker1 = {
-            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(/images/cluster-marker-1.png);background-size:contain;"></div>',
-            size: N.Size(40, 40),
-            anchor: N.Point(20, 20)
-        },
-        htmlMarker2 = {
-            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(/images/cluster-marker-2.png);background-size:contain;"></div>',
-            size: N.Size(40, 40),
-            anchor: N.Point(20, 20)
-        },
-        htmlMarker3 = {
-            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(/images/cluster-marker-3.png);background-size:contain;"></div>',
-            size: N.Size(40, 40),
-            anchor: N.Point(20, 20)
-        },
-        htmlMarker4 = {
-            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(/images/cluster-marker-4.png);background-size:contain;"></div>',
-            size: N.Size(40, 40),
-            anchor: N.Point(20, 20)
-        },
-        htmlMarker5 = {
-            content: '<div style="cursor:pointer;width:40px;height:40px;line-height:42px;font-size:10px;color:white;text-align:center;font-weight:bold;background:url(/images/cluster-marker-5.png);background-size:contain;"></div>',
-            size: N.Size(40, 40),
-            anchor: N.Point(20, 20)
-        };
-
-    var markerClustering = new MarkerClustering({
-        minClusterSize: 4,
-        maxZoom: 13,
-        map: map,
-        markers: markerList,
-        disableClickZoom: false,
-        gridSize: 120,
-        icons: [htmlMarker1, htmlMarker2, htmlMarker3, htmlMarker4, htmlMarker5],
-        indexGenerator: function(count) {
-            var index = 0;
-
-            if (count >= 10 && count < 20) {
-                index = 1;
-            } else if (count >= 20 && count < 50) {
-                index = 2;
-            } else if (count >= 50 && count < 100) {
-                index = 3;
-            } else if (count >= 100) {
-                index = 4;
-            }
-
-            return index;
-        },
-        stylingFunction: function(clusterMarker, count) {
-            $(clusterMarker.getElement()).find('div:first-child').text(count);
-        }
-    });
-  }
-
-  function changeImage(a) {
-      document.getElementByClass("img").src=a;
-  }
-
-  function saveOrDeleteRedirect(id){
-    var output = localStorage.getItem("key");		
-    var myListArr = [0];
-    if(output){
-      myListArr = JSON.parse(output);
-    }
-    
-    if(!myListArr.includes(id)){
-      //저장되어있지 않으면
-      //저장로직
-      saveSpot(id);
-      $(".isItSavedImg").attr("src", "https://i.postimg.cc/sgQGXBGD/icon-18.png");
-      $(".isItSavedText").text("삭제");
-    }else{
-      //저장된 것이라면 
-      //삭제로직 + 저장
-      myListArr.splice(myListArr.indexOf(id),1)
-      localStorage.setItem("key", JSON.stringify(myListArr));
-      $(".isItSavedImg").attr("src", "https://i.postimg.cc/NFd2ymxL/icon-17.png");
-      $(".isItSavedText").text("담기");
-    }
-  
-    // window.location.href =urlAdd;
-  }
-  function clickMap(i) {
-    return function(){
-      var infowindow = infowindowList[i]
-      infowindow.close()
-    }
-  }
-
-  function saveSpot(spot_id){
-    var saved = JSON.parse(localStorage.getItem('key'));
-    if(!saved){saved = []}
-    console.log(spot_id)
-    saved.push(spot_id)
-
-    saved = Array.from(new Set(saved));
-    localStorage.setItem("key", JSON.stringify(saved));
-  }
-
-  function getClickHandler(i) {
-    return function(){
-      var marker = markerList[i];
-      var infowindow = infowindowList[i];
-      if(infowindow.getMap()){
-        infowindow.close();
-      }else{
-        infowindow.open(map, marker)
-      }
-    }
-  }
+     </div>
+</section>
 
 
-  maker = new naver.maps.Marker({
-    map : map,
-    position : new naver.maps.LatLng(37.3595704, 127.105399),
-    icon : {
-      content : "<div class='marker'></div>"
-    }
-  })
+<!-- WORK SECTION -->
+<section id="work" class="parallax-section">
+     <div class="container">
+          <div class="row">
 
-  let currentUse = true;
+               <div class="col-md-12 col-sm-12">
+                    <!-- SECTION TITLE -->
+                    <div class="wow fadeInUp section-title" data-wow-delay="0.1s">
+                         <h2>이 시국 추천 여행지</h2>
+                         <p>우리는 가끔 쉬어야해요, 다른 사람들은 어떤 여행을 떠나고 있는지 알아봐요.</p>
+                    </div>
+               </div>
 
-  $('#current').click(() => {
-    if("geolocation" in navigator) {
-      navigator.geolocation.getCurrentPosition(function(position){
-        const lat = position.coords.latitude;
-        const lng = position.coords.longitude;
-        const latlng = new naver.maps.LatLng(lat, lng);
-        if(currentUse){
-          maker = new naver.maps.Marker({
-          map : map,
-          position :latlng,
-          icon : {
-            content : `<img class="pulse" draggable="false" unselectable="on" src="https://myfirstmap.s3.ap-northeast-2.amazonaws.com/circle.png">`,
-            anchor : new naver.maps.Point(11,11)
-          }
-          })
-          currentUse = false;
-        }
-        map.setZoom(14, true);
-        map.panTo(latlng);
+               <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.1s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/work-1.jpg" class="image-popup">
+                              <img src="images/work-1.jpg" class="img-responsive" alt="Fine Arts">
+                         </a>
+                    </div>
+                    <h4>Fine Arts</h4>
+                    <a href="https://itjusttravel.herokuapp.com/" style="background-color: cadetblue; color: beige;">지금, 여기로 떠나기 🚀🚀</a>
 
-      })
-    }else{
-      alert("현재위치를 사용할 수 없습니다.")
-    }
-  })
+               </div>
+               <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.1s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/work-1.jpg" class="image-popup">
+                              <img src="images/work-1.jpg" class="img-responsive" alt="Fine Arts">
+                         </a>
+                    </div>
+                    <h4>Fine Arts</h4>
+                    <a href="https://itjusttravel.herokuapp.com/" style="background-color: cadetblue; color: beige;">지금, 여기로 떠나기 🚀🚀</a>
+
+               </div>
+               <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.1s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/work-1.jpg" class="image-popup">
+                              <img src="images/work-1.jpg" class="img-responsive" alt="Fine Arts">
+                         </a>
+                    </div>
+                    <h4>Fine Arts</h4>
+                    <a href="https://itjusttravel.herokuapp.com/" style="background-color: cadetblue; color: beige;">지금, 여기로 떠나기 🚀🚀</a>
+
+               </div>
+               <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.1s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/work-1.jpg" class="image-popup">
+                              <img src="images/work-1.jpg" class="img-responsive" alt="Fine Arts">
+                         </a>
+                    </div>
+                    <h4>Fine Arts</h4>
+                    <a href="https://itjusttravel.herokuapp.com/" style="background-color: cadetblue; color: beige;">지금, 여기로 떠나기 🚀🚀</a>
+
+               </div>
 
 
 
-  </script>
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
-  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f1d32cdaba5b518"></script>
-  
+          </div>
+     </div>
+</section>
+
+
+<!-- CONTACT SECTION -->
+<!-- <section id="contact" class="parallax-section">
+     <div class="container">
+          <div class="row">
+
+               <div class="col-md-12 col-sm-12">
+                    
+                    <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
+                         <h2>Get in touch</h2>
+                         <p>운영자와 연락을 하고 싶다면, qhdgkdbs@gmail.com으로 연락주세요</p>
+                    </div>
+               </div>
+
+          </div>
+     </div>
+</section> -->
+
+
+<!-- FOOTER SECTION -->
+<footer id="footer" class="parallax-section">
+    <div class="container">
+        <div class="row">
+
+               <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.2s">
+                    <h4>Map Area - 콜럼버스</h4>
+                    <p>당신이 발견할 새로운 공간</p>
+               </div>
+
+               <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
+                    <div class="support-cus">
+                         <h4>Get in touch</h4>
+                         <p>운영자와 연락을 하고 싶다면, qhdgkdbs@gmail.com으로 연락주세요</p>
+                    </div>
+
+               </div>
+
+               <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.6s">
+                    <div class="support-cus">
+                         <h4>관련 사이트</h4>
+                         <p><a href="#">콜럼버스 - 여행의 새 지도</a></p>
+                         <p><a href="#">맵슐랭 - 맛집의 발견</a></p>
+                    </div>
+               </div>
+
+          </div>
+     </div>
+</footer>
+
+<!-- SCRIPTS -->
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.parallax.js"></script>
+<script src="js/jquery.magnific-popup.min.js"></script>
+<script src="js/magnific-popup-options.js"></script>
+<script src="js/smoothscroll.js"></script>
+<script src="js/wow.min.js"></script>
+<script src="js/custom.js"></script>
 
 </body>
 </html>
