--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -4,7 +4,7 @@
 
 <meta charset="UTF-8">
 
-<title>Artist - Minimal HTML Portfolio</title>
+<title>콜럼버스 맵, 당신의 여행지를 찾으세요!</title>
 
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="description" content="">
@@ -59,7 +59,7 @@
                     <div class="wow fadeInUp" data-wow-delay="0.2s">
                          <h4>지도 위에서 여행을 떠나요🚀</h4>
                          <p>해외여행을 못 가는 당신, 국내여행이라도, 아니면 랜섬여행이라도 떠나요</p>
-                         <a href="https://itjusttravel.herokuapp.com/" style="background-color: cadetblue; color: beige;">지금, 랜선여행 떠나기 🚀🚀</a>
+                         <a href="https://itjusttravel.herokuapp.com/columbus" style="background-color: cadetblue; color: beige;">지금, 랜선여행 떠나기 🚀🚀</a>
                     </div>
                </div>
 
@@ -70,7 +70,7 @@
                               <h2>현실세계에서 떠나지 못한다면, 인터넷 세상을 통해 떠나요</h2>
                          </div>
                          <div class="wow fadeInUp" data-wow-delay="0.6s">
-                              <p>우리는 때혼 휴식이 필요합니다. 그런데 요즘에는 떠나지 못하고 힘든 세상에 멈춰있죠. 언제가는 이 굴레에서 벗어나겠지만, 중간 중간 여행을 떠나며 쉼을 가져보는 것은 어떨까요. 당신이 지금 회사에 있을지라도요</p>
+                              <p>우리는 때때로 휴식이 필요합니다. 그런데 요즘에는 떠나지 못하고 힘든 세상에 멈춰있죠. 언제가는 이 굴레에서 벗어나겠지만, 중간 중간 여행을 떠나며 쉼을 가져보는 것은 어떨까요. 당신이 지금 회사에 있을지라도요</p>
                          </div>
                     </div>
                </div>
@@ -88,7 +88,7 @@
                <div class="col-md-12 col-sm-12">
                     <!-- SECTION TITLE -->
                     <div class="wow fadeInUp section-title" data-wow-delay="0.1s">
-                         <h2>이 시국 추천 여행지</h2>
+                         <h2>이시국 추천 여행지</h2>
                          <p>우리는 가끔 쉬어야해요, 다른 사람들은 어떤 여행을 떠나고 있는지 알아봐요.</p>
                     </div>
                </div>
@@ -103,41 +103,7 @@
                     <h4>Fine Arts</h4>
                     <a href="https://itjusttravel.herokuapp.com/" style="background-color: cadetblue; color: beige;">지금, 여기로 떠나기 🚀🚀</a>
 
-               </div>
-               <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.1s">
-                    <!-- WORK THUMB -->
-                    <div class="work-thumb">
-                         <a href="images/work-1.jpg" class="image-popup">
-                              <img src="images/work-1.jpg" class="img-responsive" alt="Fine Arts">
-                         </a>
-                    </div>
-                    <h4>Fine Arts</h4>
-                    <a href="https://itjusttravel.herokuapp.com/" style="background-color: cadetblue; color: beige;">지금, 여기로 떠나기 🚀🚀</a>
-
-               </div>
-               <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.1s">
-                    <!-- WORK THUMB -->
-                    <div class="work-thumb">
-                         <a href="images/work-1.jpg" class="image-popup">
-                              <img src="images/work-1.jpg" class="img-responsive" alt="Fine Arts">
-                         </a>
-                    </div>
-                    <h4>Fine Arts</h4>
-                    <a href="https://itjusttravel.herokuapp.com/" style="background-color: cadetblue; color: beige;">지금, 여기로 떠나기 🚀🚀</a>
-
-               </div>
-               <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.1s">
-                    <!-- WORK THUMB -->
-                    <div class="work-thumb">
-                         <a href="images/work-1.jpg" class="image-popup">
-                              <img src="images/work-1.jpg" class="img-responsive" alt="Fine Arts">
-                         </a>
-                    </div>
-                    <h4>Fine Arts</h4>
-                    <a href="https://itjusttravel.herokuapp.com/" style="background-color: cadetblue; color: beige;">지금, 여기로 떠나기 🚀🚀</a>
-
-               </div>
-
+             
 
 
           </div>
