추천 여행지 DB연결 url수정

--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -156,8 +156,8 @@
 
 <!-- SCRIPTS -->
 <script>
-     var urlAdd = "http://localhost:3000/"  
-     // var urlAdd = "https://itjusttravel.herokuapp.com/recomanded"
+     // var urlAdd = "http://localhost:3000/"  
+     var urlAdd = "https://itjusttravel.herokuapp.com/"
 
 
      var dataList;
