--- a/travelOntheMap/views/updateinfo.ejs
+++ b/travelOntheMap/views/updateinfo.ejs
@@ -19,6 +19,12 @@
 8/02.로딩이미지 수정<br>
 8/02.나의 여행지 멈춤<br>
 8/02.광고 recomanded 콜렉션 추가<br>
+8/03.랜딩페이기 추천 여행지 DB연결<br>
+8/03.<br>
+8/03.<br>
+8/03.<br>
+
+
 
 
 
