--- a/travelOntheMap/views/mylist.ejs
+++ b/travelOntheMap/views/mylist.ejs
@@ -39,12 +39,11 @@
 <div class="container">
      <div class="row">
           <section id="home" class="parallax-section">
-
                <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <div class="home-wrapper">
                          <h3 class="wow fadeInUp" data-wow-delay="0.2s">랜 . 선 . 여. 행</h3>
-                         <h1 class="wow fadeInUp" data-wow-delay="0.3s">지도 위에서 여행을 떠나요🚀</h1>
-                         <a href="#about" class="wow fadeInUp smoothScroll arrow-btn" data-wow-delay="0.6s"><i class="fa fa-angle-double-down"></i></a>
+                         <h1 class="wow fadeInUp" data-wow-delay="0.3s">내가 떠날, 나만의 여행지 🚀</h1>
+                         <a href="#work" class="wow fadeInUp smoothScroll arrow-btn" data-wow-delay="0.6s"><i class="fa fa-angle-double-down"></i></a>
                     </div>
                </div>
 
@@ -52,42 +51,6 @@
      </div>
 </div>
 
-
-<!-- ABOUT SECTION -->
-<section id="about" class="parallax-section">
-     <div class="container">
-          <div class="row">
-
-               <div class="col-md-4 col-sm-8">
-                    <!-- href="https://itjusttravel.herokuapp.com/columbus" -->
-                    <a href="http://localhost:3000/columbus" style="background-color: cadetblue; color: beige;">
-                         <img src="images/travelonmap1.jpg" class="wow fadeInUp img-responsive" data-wow-delay="0.2s" alt="about image" height="300px" width="300px">
-                         <div class="wow fadeInUp" data-wow-delay="0.2s">
-                              <h4><span style="color:white;">지도 위에서 여행을 떠나요🙈</span></h4>
-                              <p><span style="color:white;">해외여행을 못 가는 당신, 국내여행이라도, 아니면 랜섬여행이라도 떠나요</span></p>
-                              <hr>
-                              <p>
-                                   <span style="border-radius:12px; background-color: azure; color:cadetblue; padding:8px; font-size: 20px;"> 지금, 떠나기 🚀</span>
-                              </p>
-                         </div>
-                    </a>
-               </div>
-
-               <div class="col-md-8 col-sm-12">
-                    <div class="about-thumb">
-                         <div class="wow fadeInUp section-title" data-wow-delay="0.4s">
-                              <h3>랜 . 선 . 여 . 행</h3>
-                              <h2>현실세계에서 떠나지 못한다면, 인터넷 세상을 통해 떠나요</h2>
-                         </div>
-                         <div class="wow fadeInUp" data-wow-delay="0.6s">
-                              <p>우리는 때때로 휴식이 필요합니다. 그런데 요즘에는 떠나지 못하고 힘든 세상에 멈춰있죠. 언제가는 이 굴레에서 벗어나겠지만, 중간 중간 여행을 떠나며 쉼을 가져보는 것은 어떨까요. 당신이 지금 회사에 있을지라도요</p>
-                         </div>
-                    </div>
-               </div>
-
-          </div>
-     </div>
-</section>
 
 
 <!-- WORK SECTION -->
@@ -98,8 +61,8 @@
                <div class="col-md-12 col-sm-12">
                     <!-- SECTION TITLE -->
                     <div class="wow fadeInUp section-title" data-wow-delay="0.1s">
-                         <h2>이시국 추천 여행지</h2>
-                         <p>우리는 가끔 쉬어야해요, 다른 사람들은 어떤 여행을 떠나고 있는지 알아봐요.</p>
+                         <h2>나의, 여행지들</h2>
+                         <p>로그인 기능을 이용하지 않아, 같은 브라우져로 접속시에만 확인 할 수 있습니다!<br>언젠가 떠날 그 곳을 저장해둬요,<br>최대 20곳만 저장할 수 있으니 신중히 저장해요🙈</p>
                     </div>
                </div>
                <!-- WORK THUMB -->
@@ -164,11 +127,15 @@
      var urlAdd = "https://itjusttravel.herokuapp.com/"
 
 
+     var output = localStorage.getItem("key");		
+     var myListArr = []
+     myListArr=JSON.parse(output);
+
      var dataList;
      var htmlData = "";
 
      $.ajax({
-          url :  urlAdd + 'file/recomanded',
+          url :  urlAdd + 'file/',
           dataType :"json", // 데이터타입을 json 으로 받아옴
           success : function(data) {
                // alert("data로딩이 완료되었습니다.")
@@ -182,35 +149,80 @@
           }
      })
 
+
      var setContent = function() {
           // console.log(dataList)
           // if(!myListArr)myListArr=[0]
 
-          var content = ``
+          var content = `<div class="card">`
 
           for(var target of dataList){
-  
-               console.log(target._id)
-               
+               if(myListArr){
+                    //나의 여행지가 있을경우
+                    if(myListArr.includes(target._id)){
+
+                         isitSavedImg = "https://i.postimg.cc/sgQGXBGD/icon-18.png";
+
+                         content = content +      
+                              `
+                              <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.1s">               
+                                   <div class="work-thumb" style = "margin-bottom:0px;">
+                                        <a href="${target.moreLink}" class="image-popup">
+                                             <img src="${target.picLink}" class="img-responsive" alt="Fine Arts">
+                                        </a>
+                                   </div>
+                                   <div onclick='saveOrDeleteRedirect("${target._id}")' style = "margin-bottom:5px;text-align:right;"><img class= "isItSavedImg" src="${isitSavedImg}" alt="heelo" width="20" height="20" ></div>
+
+                                   <div>
+                                        <a href="${target.moreLink}" style="background-color: cadetblue; color: beige; font-size:18px; padding : 3px; border-radius:5px; width:100%">
+                                             지금, <span style="color:white;">${target.spot}</span>로 떠나기 🚀🚀
+                                        </a>
+                                   </div>
+                              </div>
+                              ` 
+                    }  
+               }else{
+                    // 나의 여행지가 한 곳도 없을 경우.
+                    break;
+               }
+          }
+     
+          if(myListArr.length === 0){
                content = content +      
                     `
                     <div class="wow fadeInUp col-md-3 col-sm-6" data-wow-delay="0.1s">               
-                         <div class="work-thumb">
-                              <a href="${target.moreLink}" class="image-popup">
-                                   <img src="${target.picLink}" class="img-responsive" alt="Fine Arts">
-                              </a>
+                         <div class="work-thumb" style = "margin-bottom:0px;">
+                              <div>저장된 나의 여행지가 없습니다..</div>
                          </div>
-                         
-                         <a href="${target.moreLink}" style="background-color: cadetblue; color: beige; font-size:18px; padding : 3px; border-radius:5px; width:100%">지금, <span style="color:white;">${target.spot}</span>로 떠나기 🚀🚀</a>
                     </div>
-                    `       
+                    ` 
           }
-     htmlData = htmlData + content                 
 
+          htmlData = htmlData + content +`</div>`        
 
-     $("#recomandedSpot").html(htmlData)
+          $("#recomandedSpot").html(htmlData)
      } 
 
+     function saveOrDeleteRedirect(id){
+          var output = localStorage.getItem("key");		
+          var myListArr = [0];
+          if(output){
+               myListArr = JSON.parse(output);
+          }
+          
+          //팝업으로 다시한번 물어보기
+          var r = confirm("나의 여행지에서 삭제 하시겠어요?");
+          if (r == true) {
+               //삭제 + 저장
+               myListArr.splice(myListArr.indexOf(id),1)
+               localStorage.setItem("key", JSON.stringify(myListArr));
+               location.reload()
+          } else {
+          
+          }
+          
+          // window.location.href =urlAdd;
+     }
 
 
 </script>
