인덱스 url수정

--- a/travelOntheMap/views/index.ejs
+++ b/travelOntheMap/views/index.ejs
@@ -60,7 +60,7 @@
 
                <div class="col-md-4 col-sm-8">
                     <!-- href="https://itjusttravel.herokuapp.com/columbus" -->
-                    <a href="http://localhost:3000/columbus" style="background-color: cadetblue; color: beige;">
+                    <a href="https://itjusttravel.herokuapp.com/columbus" style="background-color: cadetblue; color: beige;">
                          <img src="images/travelonmap1.jpg" class="wow fadeInUp img-responsive" data-wow-delay="0.2s" alt="about image" height="300px" width="300px">
                          <div class="wow fadeInUp" data-wow-delay="0.2s">
                               <h4><span style="color:white;">지도 위에서 여행을 떠나요🙈</span></h4>
